@@ -5,7 +5,7 @@ plugins {
 group 'io.github.edsuns.screensnap'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 9
 
 // Avoid encoding issue
 tasks.withType(JavaCompile) {
@@ -20,10 +20,20 @@ dependencies {
 //    testCompile group: 'junit', name: 'junit', version: '4.12'
 
     // For GlobalHotKey
-    compile "com.github.tulskiy:jkeymaster:1.2"
-    compile "org.slf4j:slf4j-api:1.7.30"
-    compile "org.slf4j:slf4j-nop:1.7.30"
+    implementation("com.github.tulskiy:jkeymaster:1.3")
+    implementation("org.slf4j:slf4j-api:2.0.7")
+    implementation("org.slf4j:slf4j-nop:2.0.7")
 
     // QRCode parser
-    compile "com.google.zxing:javase:3.4.0"
+    implementation("com.google.zxing:javase:3.5.2")
+}
+
+compileJava{
+    options.compilerArgs.add( "--add-exports=java.desktop/sun.awt=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED")
+}
+
+compileTestJava{
+    options.compilerArgs.add( "--add-exports=java.desktop/sun.awt=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED")
 }
